@@ -292,6 +292,8 @@ class AnteoPlayer(xbmc.Player):
         else:
             connections_limit = None
 
+        use_random_port = True if self.__settings__.getSetting('use_random_port') == 'true' else False
+
         if '1' != self.__settings__.getSetting("keep_files") and 'Saved Files' not in self.userStorageDirectory:
             keep_complete = False
             keep_incomplete = False
@@ -303,7 +305,7 @@ class AnteoPlayer(xbmc.Player):
         self.engine = Engine(uri=self.torrentUrl, download_path=self.userStorageDirectory,
                              connections_limit=connections_limit, download_kbps=download_limit, upload_kbps=upload_limit,
                              encryption=encryption, keep_complete=keep_complete, keep_incomplete=keep_incomplete,
-                             dht_routers=dht_routers)
+                             dht_routers=dht_routers, use_random_port=use_random_port)
 
     def buffer(self):
         self.pre_buffer_bytes = 30*1024*1024 #30 MB
