@@ -49,6 +49,7 @@
     <string id="30049">Anti-zapret</string>
     <string id="30050">Immunicity</string>
     <string id="30051">Max. connections (0 - unlimited)</string>
+    <string id="30052">Use random ports</string>
     <string id="30101">Interface</string>
     <string id="30102">P2P Network</string>
     <string id="30103">Advanced</string>
