@@ -49,6 +49,7 @@
     <string id="30049">Anti-zapret</string>
     <string id="30050">Immunicity</string>
     <string id="30051">Макс. соединений (0 - безлимит)</string>
+    <string id="30052">Использовать случайные порты</string>
     <string id="30101">Интерфейс</string>
     <string id="30102">P2P Сеть</string>
     <string id="30103">Дополнительные</string>
