@@ -24,9 +24,10 @@
         <setting id="download_limit"    type="number"   label="30011" default="0"       visible="!eq(-6,1)"/>
         <setting id="blank"             type="text"     label="30024" default=""        visible="eq(-7,1)"/>
         <setting id="subs_dl"           type="bool"     label="30029" default="true"    visible="!eq(-8,1)"/>
-        <setting id="keep_seeding"      type="bool"     label="30030" default="false"   visible="!eq(-9,1)" enable="eq(-7,1)"/>
+        <setting id="keep_seeding"      type="bool"     label="30030" default="false"   visible="eq(-9,0)" enable="eq(-7,1)"/>
         <setting id="encryption"        type="bool"     label="30041" default="true"    visible="!eq(-10,1)"/>
-        <setting id="connections_limit" type="number"   label="30051" default="200"       visible="eq(-11,2)"/>
+        <setting id="connections_limit" type="number"   label="30051" default="200"     visible="eq(-11,2)"/>
+        <setting id="use_random_port"   type="bool"     label="30052" default="false"   visible="eq(-12,2)"/>
     </category>
     <category label="Torrent-client">
         <setting id="torrent_save"                  type="enum"         label="50301" lvalues="50302|50303" default="0"/>
